--- a/css/style.css
+++ b/css/style.css
@@ -108,6 +108,8 @@ li {
   margin-top: 20px;
   margin-right: 5px;
   padding: 0 20px 10px 25px;
+  height: 50vh;
+  overflow-y: scroll;
 }
 .taskBox.overflow {
   overflow-y: auto;
